syntax = "proto3";

service chat {
    rpc Send(SendRequest) returns (Response);
    rpc Receive(ReceiveRequest) returns (ReceiveResponse);
}

message ReceiveRequest {
    string userID = 1;
}

message ReceiveResponse {
    repeated UserChat Chats = 1;
}

message UserChat {
    string Id = 8;
    string FromID = 1;
    string ToID = 2;
    string Message = 3;
    int64 ReceivedAt = 4;
    int64 ReadAt = 5;
    int64 CreatedAt = 6;
    bool Deleted = 7;
}

message SendRequest {
    string fromUserID = 1;
    string toUserID = 2;
    string message = 3;
}

message Response {
}